--- a/app/src/main/res/layout/activity_net_tools.xml
+++ b/app/src/main/res/layout/activity_net_tools.xml
@@ -21,4 +21,25 @@
             android:layout_height="wrap_content" />
     </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="网络类型:" />
+
+        <TextView
+            android:id="@+id/tv_net_type"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
+    <Button
+        android:id="@+id/bt_open_network_setting"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="打开网络设置"
+        />
+
 </LinearLayout>
