--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,5 +26,11 @@
     android:text="DeviceMsgTools"
     android:id="@+id/device_msg_tools"
     />
+   <Button
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:text="DeviceMsgTools"
+    android:id="@+id/sp_tools"
+    />
 
 </LinearLayout>
