--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,7 +29,7 @@
    <Button
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:text="DeviceMsgTools"
+    android:text="SPTools"
     android:id="@+id/sp_tools"
     />
 
