--- a/hmvvm/src/main/res/layout/activity_login.xml
+++ b/hmvvm/src/main/res/layout/activity_login.xml
@@ -19,9 +19,12 @@
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
+
+            android:layout_alignParentTop="true"
             android:background="@mipmap/login_back"
             android:scaleType="fitXY" />
+
+
 
         <LinearLayout
             android:layout_width="match_parent"
