--- a/hmvvm/src/main/res/values-night/themes.xml
+++ b/hmvvm/src/main/res/values-night/themes.xml
@@ -2,6 +2,8 @@
     <!-- Base application theme. -->
     <style name="Theme.HAndroid" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Primary brand color. -->
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
         <item name="colorPrimary">@color/purple_200</item>
         <item name="colorPrimaryDark">@color/purple_700</item>
         <item name="colorAccent">@color/teal_200</item>
